/**
 * @Author pibing
 * @create 2021/1/4 10:13 AM
 */
syntax = "proto3";
package protos;
option go_package = ".;protos";

service Test {
	rpc GetList(Request) returns (Respose) {}
    rpc GetOne(Request) returns (Respose2) {}
}


message Request{
	string id =1;
}

message User {
    string id = 1;
    string name =2;
}
message Respose {
	int64 Code =1;
	string Msg =2;
    repeated User Data = 3;
}


message Respose2{
     int64 Code =1;
     string Msg =2;
     User Data =3;
}
